testsuite/poke.pkl/optcond-2-diag.pk
/* { dg-do compile } */

type Foo = union { int i if 1; }; /* { dg-error "not allowed" } */
